working.css
/*! test.css v3.0.2 | MIT License | git.io/normalize */

/**
 * 1. Set default font family to sans-serif.
 * 2. Prevent iOS text size adjust after orientation change, without disabling
 *    user zoom.
 */
 * {
    margin:0;
    padding: 0;
   }
  
  html {
    font-family: Geneva; /* 1 */
    -ms-text-size-adjust: 100%; /* 2 */
    -webkit-text-size-adjust: 100%; /* 2 */
  }

/* Colors =====================================================

Primary
-----
UMN Marroon: #7a0019
UMN Gold: #ffcc33

Secondary
-----
Dark Marron: #5b0013
Dark Gold: #ffb71e
Dark Gray: #333333

Medium-Dark Gray: #5a5a5a
Medium-Light Gray: #777677

Light Marroon: #900021
Light Gold: #ffde7a
Light Gray: #d5d6d2
 */



/* Responsive css columns
================================================================== */
  
/* Banner Row Style: ------------------------------------ 
no buffer around edges so fill is to edge of viewport */
/* For mobile phones: */
/* Banner class with no edge buffer: */
[class*="ban-"] {
    width: 100vw;
  }
  /* For desktop: */
  @media only screen and (min-width: 768px) {
    /* For desktop: */
    .ban-1 {width: 8.33vw;}
    .ban-2 {width: 16.66vw;}
    .ban-3 {width: 25vw;}
    .ban-4 {width: 33.33vw;}
    .ban-5 {width: 41.66vw;}
    .ban-6 {width: 50vw;}
    .ban-7 {width: 58.33vw;}
    .ban-8 {width: 66.66vw;}
    .ban-9 {width: 75vw;}
    .ban-10 {width: 83.33vw;}
    .ban-11 {width: 91.66vw;}
    .ban-12 {width: 100vw;}
  }

[class="banner"]{ /* Text Banner Style: */
background-color:#7a0019;
padding:0.8vw;
color:#ffcc33;
font-family:'Geneva';
}

[class = "bannerH1"]{ /* Text Banner Style: */
    font-size: 18pt;
    color: #ffcc33
}
c[lass = "bannerH2"]{ /* Text Banner Style: */
    font-size: 12pt;
    color: #ffcc33
}
[class = "bannerText"]{ /* Text Banner Style: */
    font-size: 10pt
}

@media screen and (min-width:600px) {
    .bannerH1 {font-size: 3.6vw}
    .bannerText {font-size: 1.2vw}
}

/* Column Row Style: ------------------------------------ 
 buffer around edges */
 
/* For mobile phones: */
  
  @media only screen and (min-width: 768px) {
    /* For desktop: */
    .col-1 {width: 8.33vw;}
    .col-2 {width: 16.66vw;}
    .col-3 {width: 25vw;}
    .col-4 {width: 33.33vw;}
    .col-5 {width: 41.66vw;}
    .col-6 {width: 50vw;}
    .col-7 {width: 58.33vw;}
    .col-8 {width: 66.66vw;}
    .col-9 {width: 75vw;}
    .col-10 {width: 83.33vw;}
    .col-11 {width: 91.66vw;}
    .col-12 {width: 100vw;}
  }


/* float columns to the left and pad. */
[class*="col-"] {
    float: left;
    padding: 15px;
  }

  .row::after {
    content: "";
    clear: both;
    display: table;
  }


  /* Top Navigation Bar
     ========================================================================== */

/* Add a black background color to the top navigation */
.topnav {
    background-color: #333333;
    overflow:auto;
  }
  
  /* Style the links inside the navigation bar */
  .topnav a {
    float: left;
    display: block;
    color: #d5d6d2;
    text-align: center;
    padding: 0.5vw 0.6vw;
    text-decoration: none;
    font-size:1.2vw;
  }
  
  /* Add an active class to highlight the current page */
  .active {
    background-color: #d5d6d2;
    color: #333333;
  }  

  .dropdownactive {
    background-color: white;
    color: #333333;
  }  

  /* Add a color to the active/current link */
.topnav a.active {
    background-color: #d5d6d2;
    color: #333333;
    font-weight: bolder;
  } 
  
  /* Hide the link that should open and close the topnav on small screens */
  .topnav .icon {
    display: none;
  }
  
  /* Dropdown container - needed to position the dropdown content */
  .dropdown {
    float: left;
    overflow: hidden;
  }

  /* Style the dropdown button to fit inside the topnav */
  .dropdown .dropbtn {
    font-size: 1.2vw; 
    border: none;
    outline: none;
    color: #d5d6d2;
    padding: 0.5vw 0.6vw;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
  }
  
  .dropdown .dropbtnActive {
    font-size: 1.2vw; 
    border: none;
    outline: none;
    background-color: #d5d6d2;
    color: #333333;
    padding: 0.5vw 0.6vw;
    font-family: inherit;
    margin: 0;
  }

  /* Style the dropdown content (hidden by default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #d5d6d2;
    min-width: 180px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }


  
  /* Style the links inside the dropdown */
  .dropdown-content a {
    float: none;
    color: #333333;
    padding: 0.5vw 0.6vw;
    text-decoration: none;
    display: block;
    text-align: left;
  }
  
  /* Add a light background on topnav links and the dropdown button on hover */
  .topnav a:hover, .dropdown:hover .dropbtn {
    background-color: #d5d6d2;
    color: #333333;
  }
  
  /* Add a grey background to dropdown links on hover */
  .dropdown-content a:hover {
    background-color: rgb(244, 241, 241);
    color: black;
  }

  /* Show the dropdown menu when the user moves the mouse over the dropdown button */
  .dropdown:hover .dropdown-content {
    display: block;
  }

/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 600px) {
  .topnav a:not(:first-child), .dropdown .dropbtn, .dropdown .dropbtnActive {
    display: none;
  }
  .topnav a, .dropdown .dropbtn {
    font-size: 16pt;
    padding: 4pt 6pt 4pt 6pt;
}
.topnav a, .dropdown .dropbtn {
  font-size: 16pt;
  padding: 4pt 6pt 4pt 6pt;
}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
  .topnav.responsive .dropdown {float: none;}
  .topnav.responsive .dropdown-content {position: relative;}
  .topnav.responsive .dropdown .dropbtn {
    display: block;
    width: 100%;
    text-align: left;
  }
}

/* General Spacing Classes */

.row {
    display: flex;
    align-items: center;
    justify-content: center
  }
  
  .column {
    flex: 33%;
    padding: 5px;
  }
  /* this button allows the user to open a pdf version of your cv */

  buttonCV {
    background-color: transparent;
    border: none;
    color:blue;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 100%;
    cursor:pointer
  }
  
    /* this button allows the user to open a pdf version of your GRC poster */
  buttonGRC {
    background-color: #7a0019 ;
    font-weight: bold;
    border: 2px;
    color: #ffde7a;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 100%;
    cursor:pointer;
    padding: 15pt;
    border-radius: 10px;
  }

    /* this button allow the user to select the banner page title and return to home page */
  buttonBanner {
    background-color: inherit;
    border: none;
    color: #ffcc33;
    font-weight: bold;
    text-align: inherit;
    text-decoration: inherit;
    display: inline-block;
    font-size: inherit;
    cursor:pointer
  }

  /* this sets the box class for my 'job search' callout on home page*/

[class = "attn"] {
background-color: #7a0019;
border-color: black;
border-radius: 8pt;
border-width: 2pt;
padding-left: 4%;
padding-right: 4%;
padding-bottom: 3%
}

[class = "attnH"] {
color: #ffcc33;
font-weight: bolder;
text-align: center;
padding: 8pt;}

[class = "attnText"] {
    color: white;
    text-align: none;
    align-self: center;
}
    

